Orm.xmlとJavaをエディタで遷移出来る様にした。ついでに、Orm.xmlの新規作成ウィザードを作った。
git-svn-id: https://www.seasar.org/svn/chura/trunk@220 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.properties
@@ -19,3 +19,5 @@ plugin.brand=Dolteng Eclipse Plugin
 openPagePair.label=Open Page Pair
 openActionPair.label=Open Action Pair
 createService.label=Create Service
+openDaoPair.label=Open Dao Pair
+openEntityPair.label=Open Entity Pair
