--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="lib" path="template/jars/postgresql-8.1-405.jdbc3.jar"/>
 	<classpathentry sourcepath="template/jars/sources/fuzzyxml-0.0.9-sources.zip" kind="lib" path="template/jars/fuzzyxml-0.0.9.jar"/>
 	<classpathentry kind="lib" path="template/jars/commons-jxpath-1.2.jar"/>
+	<classpathentry kind="lib" path="template/jars/freemarker-2.3.8.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
