--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
-#Fri Sep 01 16:52:39 JST 2006
+#Fri Oct 27 20:01:32 JST 2006
 eclipse.preferences.version=1
+encoding//template/resources/appMessages.properties=UTF-8
+encoding//template/resources/appMessages_ja.properties=UTF-8
 encoding/<project>=UTF-8
