--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
@@ -215,6 +215,35 @@
                   value="org.seasar.dolteng.eclipse.nature"/>
          </visibility>
       </objectContribution>
+      <objectContribution
+            adaptable="true"
+            id="org.seasar.dolteng.eclipse.ormxml.objectContribution"
+            nameFilter="*.sql"
+            objectClass="org.eclipse.core.resources.IFile">
+         <menu
+               id="org.seasar.dolteng.eclipse.object.menu"
+               label="Dolteng"
+               path="additions">
+            <separator name="additions"/>
+         </menu>
+         <action
+               class="org.seasar.dolteng.eclipse.action.OpenDaoPairAction"
+               definitionId="org.seasar.dolteng.eclipse.command.OpenDaoPairAction"
+               id="org.seasar.dolteng.eclipse.object.OpenDaoPairAction"
+               label="%openDaoPair.label"
+               menubarPath="org.seasar.dolteng.eclipse.object.menu/additions"/>
+         <action
+               class="org.seasar.dolteng.eclipse.action.OpenEntityPairAction"
+               definitionId="org.seasar.dolteng.eclipse.command.OpenEntityPairAction"
+               id="org.seasar.dolteng.eclipse.object.OpenEntityPairAction"
+               label="%openEntityPair.label"
+               menubarPath="org.seasar.dolteng.eclipse.object.menu/additions"/>
+         <visibility>
+            <objectState
+                  name="projectNature"
+                  value="org.seasar.dolteng.eclipse.nature"/>
+         </visibility>
+      </objectContribution>
    </extension>
    <extension
          point="org.eclipse.ui.editorActions">
@@ -303,6 +332,20 @@
                label="%openEntityPair.label"
                menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
+         <action
+               class="org.seasar.dolteng.eclipse.action.OpenDaoPairAction"
+               definitionId="org.seasar.dolteng.eclipse.command.OpenDaoPairAction"
+               id="org.seasar.dolteng.eclipse.OpenDaoPairAction"
+               label="%openDaoPair.label"
+               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               style="push"/>
+         <action
+               class="org.seasar.dolteng.eclipse.action.OpenEntityPairAction"
+               definitionId="org.seasar.dolteng.eclipse.command.OpenEntityPairAction"
+               id="org.seasar.dolteng.eclipse.OpenEntityPairAction"
+               label="%openEntityPair.label"
+               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               style="push"/>
       </editorContribution>
       <editorContribution
             id="org.seasar.dolteng.eclipse.editorContribution"
@@ -325,6 +368,20 @@
                definitionId="org.seasar.dolteng.eclipse.command.OpenActionPairAction"
                id="org.seasar.dolteng.eclipse.OpenActionPairAction"
                label="%openActionPair.label"
+               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               style="push"/>
+         <action
+               class="org.seasar.dolteng.eclipse.action.OpenDaoPairAction"
+               definitionId="org.seasar.dolteng.eclipse.command.OpenDaoPairAction"
+               id="org.seasar.dolteng.eclipse.OpenDaoPairAction"
+               label="%openDaoPair.label"
+               menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
+               style="push"/>
+         <action
+               class="org.seasar.dolteng.eclipse.action.OpenEntityPairAction"
+               definitionId="org.seasar.dolteng.eclipse.command.OpenEntityPairAction"
+               id="org.seasar.dolteng.eclipse.OpenEntityPairAction"
+               label="%openEntityPair.label"
                menubarPath="Edit/org.seasar.dolteng.eclipse.editor.Actions/additions"
                style="push"/>
       </editorContribution>
