git-svn-id: https://www.seasar.org/svn/chura/trunk@300 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -53,6 +53,9 @@ PREFERENCE_DEFAULT_ENTITY_PKG=Default Entity Package
 PREFERENCE_DEFAULT_DAO_PKG=Default Dao Package
 PREFERENCE_DEFAULT_DTO_PKG=Default Dto Package
 PREFERENCE_DEFAULT_WEB_PKG=Default Web Package
+PREFERENCE_ORM_XML_PATH=OrmXmlPath
+PREFERENCE_SOURCE_PATH=SourcePath
+PREFERENCE_RESOURCE_PATH=ResourcePath
 BROWSE=Bro&wse...
 PACKAGE_SELECTION=Package Selection
 PACKAGE_SELECTION_DESC=&Choose a folder:
