--- a/.classpath
+++ b/.classpath
@@ -20,5 +20,6 @@
 	<classpathentry sourcepath="template/jars/sources/fuzzyxml-0.0.9-sources.zip" kind="lib" path="template/jars/fuzzyxml-0.0.9.jar"/>
 	<classpathentry kind="lib" path="template/jars/commons-jxpath-1.2.jar"/>
 	<classpathentry kind="lib" path="template/jars/freemarker-2.3.8.jar"/>
+	<classpathentry kind="lib" path="template/jars/hsqldb-1.8.0.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
