git-svn-id: https://www.seasar.org/svn/chura/trunk@305 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -39,7 +39,7 @@ WIZARD_PAGE_ENTITY_TREE_LABEL=Available Fields ...
 WIZARD_PAGE_ENTITY_CONVERSION_METHOD=Name Conversion Method :
 WIZARD_PAGE_ENTITY_CONVERSION_METHOD_NONE=None
 WIZARD_PAGE_ENTITY_CONVERSION_METHOD_BASIC=Basic
-ACTION_ENTITY_CREATION=New Dao and or Entity ...
+ACTION_ENTITY_CREATION=New Dao or Entity ...
 COLUMN_SQL_TYPE=SQL Type
 COLUMN_COLUMN_NAME=Column Name
 COLUMN_MODIFIER=Accessor Modifier
