--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -39,7 +39,7 @@ WIZARD_PAGE_ENTITY_TREE_LABEL=Available Fields ...
 WIZARD_PAGE_ENTITY_CONVERSION_METHOD=Name Conversion Method :
 WIZARD_PAGE_ENTITY_CONVERSION_METHOD_NONE=None
 WIZARD_PAGE_ENTITY_CONVERSION_METHOD_BASIC=Basic
-ACTION_ENTITY_CREATION=New Dao and or Entity ...
+ACTION_ENTITY_CREATION=New Dao or Entity ...
 COLUMN_SQL_TYPE=SQL Type
 COLUMN_COLUMN_NAME=Column Name
 COLUMN_MODIFIER=Accessor Modifier
