--- a/template/50/.classpath
+++ b/template/50/.classpath
@@ -34,12 +34,12 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/ehcache-1.2.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/ejb3-persistence-3.0.jar"/>
-	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/hibernate-3.2.0.cr4-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/hibernate-3.2.0.cr4.jar"/>
-	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/hibernate-annotations-3.2.0.cr2-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/hibernate-annotations-3.2.0.cr2.jar"/>
-	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/hibernate-entitymanager-3.2.0.cr2-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/hibernate-entitymanager-3.2.0.cr2.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jboss-archive-browsing-5.0.0alpha.jar"/>
-	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/kuina-dao-1.0.0-M1-SNAPSHOT-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/kuina-dao-1.0.0-M1-SNAPSHOT.jar"/>
+	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/hibernate-3.2.0.ga-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/hibernate-3.2.0.ga.jar"/>
+	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/hibernate-annotations-3.2.0.ga-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/hibernate-annotations-3.2.0.ga.jar"/>
+	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/hibernate-entitymanager-3.2.0.ga-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/hibernate-entitymanager-3.2.0.ga.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jboss-archive-browsing-5.0.0alpha-200607201-119.jar"/>
+	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/kuina-dao-1.0.0-rc1-SNAPSHOT-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/kuina-dao-1.0.0-rc1-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/lucene-1.4.3.jar"/>
-	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/s2hibernate-jpa-1.0.0-beta-2-SNAPSHOT-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/s2hibernate-jpa-1.0.0-beta-2-SNAPSHOT.jar"/>
+	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/s2hibernate-jpa-1.0.0-rc1-SNAPSHOT-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/s2hibernate-jpa-1.0.0-rc1-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="target/test-classes"/>
 </classpath>
