--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
@@ -67,22 +67,26 @@
          <action
                class="org.seasar.dolteng.eclipse.action.OpenPagePairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenPagePairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.viewer.OpenPagePairAction"
                label="%openPagePair.label"
                menubarPath="org.seasar.dolteng.eclipse.viewer.web.menu/additions"/>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenActionPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenActionPairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.viewer.OpenActionPairAction"
                label="%openActionPair.label"
                menubarPath="org.seasar.dolteng.eclipse.viewer.web.menu/additions"/>
          <action
                class="org.seasar.dolteng.eclipse.action.NewServiceAction"
+               icon="icons/newclass_wiz.gif"
                id="org.seasar.dolteng.eclipse.viewer.NewServiceAction"
                label="%createService.label"
                menubarPath="org.seasar.dolteng.eclipse.viewer.web.menu/additions2"/>
          <action
                class="org.seasar.dolteng.eclipse.action.RefreshMarkerAction"
+               icon="icons/refresh.gif"
                id="org.seasar.dolteng.eclipse.viewer.RefreshMarkerAction"
                label="Refresh Marker"
                menubarPath="org.seasar.dolteng.eclipse.viewer.web.menu/additions2"/>
@@ -117,12 +121,14 @@
          <action
                class="org.seasar.dolteng.eclipse.action.OpenDaoPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenDaoPairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.viewer.OpenDaoPairAction"
                label="%openDaoPair.label"
                menubarPath="org.seasar.dolteng.eclipse.viewer.model.menu/additions"/>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenEntityPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenEntityPairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.viewer.OpenEntityPairAction"
                label="%openEntityPair.label"
                menubarPath="org.seasar.dolteng.eclipse.viewer.model.menu/additions"/>
@@ -160,25 +166,37 @@
          </menu>
          <action
                class="org.seasar.dolteng.eclipse.action.NewPageWizardAction"
+               icon="icons/newclass_wiz.gif"
                id="org.seasar.dolteng.eclipse.newPageAction"
                label="Create New Page Class"
                menubarPath="org.seasar.dolteng.eclipse.object.menu/additions"/>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenPagePairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenPagePairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.object.OpenPagePairAction"
                label="%openPagePair.label"
                menubarPath="org.seasar.dolteng.eclipse.object.menu/additions"/>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenActionPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenActionPairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.object.OpenActionPairAction"
                label="%openActionPair.label"
                menubarPath="org.seasar.dolteng.eclipse.object.menu/additions"/>
          <action
                class="org.seasar.dolteng.eclipse.action.RefreshMarkerAction"
+               icon="icons/refresh.gif"
                id="org.seasar.dolteng.eclipse.object.RefreshMarkerAction"
                label="Refresh Marker"
+               menubarPath="org.seasar.dolteng.eclipse.object.menu/additions"/>
+         <action
+               class="org.seasar.dolteng.eclipse.action.ViewOnServerAction"
+               definitionId="org.seasar.dolteng.eclipse.command.ViewOnServerAction"
+               enablesFor="1"
+               icon="icons/browser.gif"
+               id="org.seasar.dolteng.eclipse.object.ViewOnServer"
+               label="View on Server"
                menubarPath="org.seasar.dolteng.eclipse.object.menu/additions"/>
          <visibility>
             <objectState
@@ -200,12 +218,14 @@
          <action
                class="org.seasar.dolteng.eclipse.action.OpenDaoPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenDaoPairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.object.OpenDaoPairAction"
                label="%openDaoPair.label"
                menubarPath="org.seasar.dolteng.eclipse.object.menu/additions"/>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenEntityPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenEntityPairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.object.OpenEntityPairAction"
                label="%openEntityPair.label"
                menubarPath="org.seasar.dolteng.eclipse.object.menu/additions"/>
@@ -229,12 +249,14 @@
          <action
                class="org.seasar.dolteng.eclipse.action.OpenDaoPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenDaoPairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.object.OpenDaoPairAction"
                label="%openDaoPair.label"
                menubarPath="org.seasar.dolteng.eclipse.object.menu/additions"/>
          <action
                class="org.seasar.dolteng.eclipse.action.OpenEntityPairAction"
                definitionId="org.seasar.dolteng.eclipse.command.OpenEntityPairAction"
+               icon="icons/file_change.gif"
                id="org.seasar.dolteng.eclipse.object.OpenEntityPairAction"
                label="%openEntityPair.label"
                menubarPath="org.seasar.dolteng.eclipse.object.menu/additions"/>
@@ -432,6 +454,10 @@
             categoryId="org.seasar.dolteng.eclipse.command.category"
             id="org.seasar.dolteng.eclipse.command.OpenEntityPairAction"
             name="OpenEntityPair"/>
+      <command
+            categoryId="org.seasar.dolteng.eclipse.command.category"
+            id="org.seasar.dolteng.eclipse.command.ViewOnServerAction"
+            name="ViewOnServer"/>
    </extension>
    <extension
          point="org.eclipse.ui.bindings">
