--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/resources"/>
+	<classpathentry kind="lib" path="template/jars/s2-extension-2.4.4.jar"/>
+	<classpathentry kind="lib" path="template/jars/s2-framework-2.4.4.jar"/>
 	<classpathentry output="target/test-classes" kind="src" path="src/test/java"/>
 	<classpathentry output="target/test-classes" kind="src" path="src/test/resources"/>
-	<classpathentry sourcepath="template/jars/sources/s2-extension-2.4.0-rc-3-SNAPSHOT-sources.jar" kind="lib" path="template/jars/s2-extension-2.4.0-rc-3-SNAPSHOT.jar"/>
-	<classpathentry sourcepath="template/jars/sources/s2-framework-2.4.0-rc-3-SNAPSHOT-sources.jar" kind="lib" path="template/jars/s2-framework-2.4.0-rc-3-SNAPSHOT.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="template/jars/junit-3.8.2.jar"/>
@@ -20,6 +20,6 @@
 	<classpathentry sourcepath="template/jars/sources/fuzzyxml-0.0.9-sources.zip" kind="lib" path="template/jars/fuzzyxml-0.0.9.jar"/>
 	<classpathentry kind="lib" path="template/jars/commons-jxpath-1.2.jar"/>
 	<classpathentry kind="lib" path="template/jars/freemarker-2.3.8.jar"/>
-	<classpathentry kind="lib" path="template/jars/hsqldb-1.8.0.1.jar"/>
+	<classpathentry kind="lib" path="template/jars/h2-2006-11-03.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
