--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -90,3 +90,4 @@ WIZARD_PAGE_DTO_FIELD_SELECTION=Edit Dto fields
 JUMP_TO_HTML=Jump to {0}
 JUMP_TO_CLASS=Jump to {0}#{1}
 ACTION_SCAFFOLD_CREATION=Generate Scaffold Application
+ADD_DYNAMIC_PROPERTY_SELECT_ATTRIBUTE=Select Attributes to add Dynamic Properties
