--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -91,3 +91,5 @@ JUMP_TO_HTML=Jump to {0}
 JUMP_TO_CLASS=Jump to {0}#{1}
 ACTION_SCAFFOLD_CREATION=Generate Scaffold Application
 ADD_DYNAMIC_PROPERTY_SELECT_ATTRIBUTE=Select Attributes to add Dynamic Properties
+WIZARD_REGISTER_MOCKS_TITLE=Register Mocks
+WIZARD_SELECT_MOCKS_TO_REGISTER=Select Mocks to Register
