--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Images.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Images.properties
@@ -1,18 +1,4 @@
-###############################################################################
-# Copyright 2004-2006 the Seasar Foundation and the Others.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, 
-# either express or implied. See the License for the specific language
-# governing permissions and limitations under the License.
-###############################################################################
+
 PLUGIN_IMAGE=images/sample.gif
 CONNECTION_WIZARD=images/connection_wizard.gif
 CONNECTION=images/connectionFolder.gif
@@ -37,3 +23,6 @@ UNCHECKED=images/unchecked.gif
 CHECK=images/check.gif
 TYPE=images/types.gif
 SYNCED=images/synced.gif
+PACKAGE=images/package_obj.gif
+INTERFACE=images/innerinterface_public_obj.gif
+CLASS=images/class_obj.gif
