convention.diconにMockを登録するウィザードを追加した。
git-svn-id: https://www.seasar.org/svn/chura/trunk@364 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -93,3 +93,6 @@ ACTION_SCAFFOLD_CREATION=Generate Scaffold Application
 ADD_DYNAMIC_PROPERTY_SELECT_ATTRIBUTE=Select Attributes to add Dynamic Properties
 WIZARD_REGISTER_MOCKS_TITLE=Register Mocks
 WIZARD_SELECT_MOCKS_TO_REGISTER=Select Mocks to Register
+WIZARD_CREATE_NEWONE=Configure New convention.dicon for Mock From production config.
+WIZARD_OUTPUT_FILE=Output File
+WIZARD_COPYFROM_FILE=Copy From
