--- a/dolteng/org.seasar.dolteng.eclipse.plugin/.classpath
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="lib" path="template/jars/s2-extension-2.4.7.jar"/>
-	<classpathentry kind="lib" path="template/jars/s2-framework-2.4.7.jar"/>
+	<classpathentry sourcepath="/seasar2/s2-framework/src/main/java" kind="lib" path="template/jars/s2-framework-2.4.7.jar"/>
 	<classpathentry output="target/test-classes" kind="src" path="src/test/java"/>
 	<classpathentry output="target/test-classes" kind="src" path="src/test/resources"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
