git-svn-id: https://www.seasar.org/svn/chura/trunk@384 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -49,6 +49,7 @@ PREFERENCE_USE_DOLTENG=Use Dolteng
 PREFERENCE_USE_S2DAO=Use S2Dao
 PREFERENCE_DAO_TYPE=Dao Type :
 PREFERENCE_USE_PAGE_MARKER=Use Page Marker
+PREFERENCE_USE_DI_MARKER=Use DI Marker
 PREFERENCE_DEFAULT_ENTITY_PKG=Default Entity Package
 PREFERENCE_DEFAULT_DAO_PKG=Default Dao Package
 PREFERENCE_DEFAULT_DTO_PKG=Default Dto Package
