Teeda用雛形HTML作成Wizardを追加した。
git-svn-id: https://www.seasar.org/svn/chura/trunk@399 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
@@ -49,6 +49,15 @@
             id="ChuraProjectWizard"
             name="Chura Project"
             project="true"/>
+      <wizard
+            canFinishEarly="false"
+            category="org.seasar.dolteng.eclipse"
+            class="org.seasar.dolteng.eclipse.wizard.TeedaHTMLWizard"
+            hasPages="true"
+            id="TeedaHTMLWizard"
+            name="Teeda HTML"
+            project="false">
+      </wizard>
    </extension>
    <extension
          point="org.eclipse.ui.popupMenus">
