--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -97,3 +97,4 @@ WIZARD_SELECT_MOCKS_TO_REGISTER=Select Mocks to Register
 WIZARD_CREATE_NEWONE=Configure New convention.dicon for Mock From production config.
 WIZARD_OUTPUT_FILE=Output File
 WIZARD_COPYFROM_FILE=Copy From
+WIZARD_SQL_FILE=SQL Path :
