git-svn-id: https://www.seasar.org/svn/chura/trunk@407 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -71,7 +71,7 @@ JPA_ASSOCIATION_DIALOG_CASCADE=cascade :
 JPA_ASSOCIATION_DIALOG_FETCH=fetch :
 JPA_ASSOCIATION_DIALOG_OPTIONAL=optional :
 JPA_ASSOCIATION_DIALOG_MAPPEDBY=mappedBy :
-REFRESH=Refresh...
+REFRESH=&Refresh...
 LOAD_FROM_PROJECT=Load From Project...
 WIZARD_CHURA_PROJECT_TITLE=Create a Chura Project
 WIZARD_PAGE_CHURA_ROOT_PACKAGE=Root Package Name :
