git-svn-id: https://www.seasar.org/svn/chura/trunk@429 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -45,6 +45,9 @@ COLUMN_COLUMN_NAME=Column Name
 COLUMN_MODIFIER=Accessor Modifier
 COLUMN_JAVA_CLASS=Class Name
 COLUMN_FIELD_NAME=Field Name
+COLUMN_ID=mxml id
+COLUMN_COMPONENT_ATTR=Binding Attribute
+COLUMN_MODEL_ID=Model Variable
 PREFERENCE_USE_DOLTENG=Use Dolteng
 PREFERENCE_USE_S2DAO=Use S2Dao
 PREFERENCE_VIEW_TYPE=View Type :
@@ -103,3 +106,4 @@ WIZARD_CREATE_NEWONE=Configure New convention.dicon for Mock From production con
 WIZARD_OUTPUT_FILE=Output File
 WIZARD_COPYFROM_FILE=Copy From
 WIZARD_SQL_FILE=SQL Path :
+WIZARD_BINDING_DTO_FILE=Binding DTO File
